tests/snapshots/integration__pairing_compact_boundary.snap
---
source: tests/integration.rs
expression: "IndexView::of(&idx)"
---
{
  "uses": {
    "toolu_post_compact_1": [
      3,
      0
    ]
  },
  "results": {
    "toolu_post_compact_1": [
      4,
      0
    ]
  }
}
