tests/snapshots/integration__pairing_huge_tool_result.snap
---
source: tests/integration.rs
expression: "IndexView::of(&idx)"
---
{
  "uses": {
    "toolu_huge_1": [
      1,
      0
    ]
  },
  "results": {
    "toolu_huge_1": [
      2,
      0
    ]
  }
}
