tests/snapshots/integration__pairing_screenshot_heavy.snap
---
source: tests/integration.rs
expression: "IndexView::of(&idx)"
---
{
  "uses": {
    "toolu_screen_0": [
      1,
      0
    ],
    "toolu_screen_1": [
      4,
      0
    ],
    "toolu_screen_2": [
      7,
      0
    ]
  },
  "results": {
    "toolu_screen_0": [
      2,
      0
    ],
    "toolu_screen_1": [
      5,
      0
    ],
    "toolu_screen_2": [
      8,
      0
    ]
  }
}
