tests/snapshots/integration__sliding_window_failure_heavy.snap
---
source: tests/integration.rs
expression: messages
---
[
  {
    "content": [
      {
        "text": "Try the broken thing 0",
        "type": "text"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "id": "toolu_fail_0",
        "input": {
          "command": "foo-does-not-exist-0"
        },
        "name": "Bash",
        "type": "tool_use"
      }
    ],
    "role": "assistant"
  },
  {
    "content": [
      {
        "content": "bash: foo-does-not-exist-0: command not found",
        "is_error": true,
        "tool_use_id": "toolu_fail_0",
        "type": "tool_result"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "text": "Try the broken thing 1",
        "type": "text"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "id": "toolu_fail_1",
        "input": {
          "command": "foo-does-not-exist-1"
        },
        "name": "Bash",
        "type": "tool_use"
      }
    ],
    "role": "assistant"
  },
  {
    "content": [
      {
        "content": "bash: foo-does-not-exist-1: command not found",
        "is_error": true,
        "tool_use_id": "toolu_fail_1",
        "type": "tool_result"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "text": "Try the broken thing 2",
        "type": "text"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "id": "toolu_fail_2",
        "input": {
          "command": "foo-does-not-exist-2"
        },
        "name": "Bash",
        "type": "tool_use"
      }
    ],
    "role": "assistant"
  },
  {
    "content": [
      {
        "content": "bash: foo-does-not-exist-2: command not found",
        "is_error": true,
        "tool_use_id": "toolu_fail_2",
        "type": "tool_result"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "text": "Try the broken thing 3",
        "type": "text"
      }
    ],
    "role": "user"
  },
  {
    "content": [
      {
        "id": "toolu_fail_3",
        "input": {
          "command": "foo-does-not-exist-3"
        },
        "name": "Bash",
        "type": "tool_use"
      }
    ],
    "role": "assistant"
  },
  {
    "content": [
      {
        "content": "bash: foo-does-not-exist-3: command not found",
        "is_error": true,
        "tool_use_id": "toolu_fail_3",
        "type": "tool_result"
      }
    ],
    "role": "user"
  }
]
